# docquery

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: evaluator.md  rag-code-reviewer.md  security-auditor.md
.claude/commands/: commit.md
.claude/rules/: commits.md
.github/workflows/: ci.yml  security-suite.yml
docs/: BRIEFING.md
docs/sample/: api_reference.md  architecture.md  configuration.md  evaluation.md  ingestion.md  internal_architecture.md  query_pipeline.md
eval/: dataset.json  dataset_v2.json  run_eval.py
eval/results/: 20260423T233011Z.json  20260424T001026Z.json  20260424T001533Z.json  20260424T002023Z.json  baseline.json
eval/results/milestones/: 2026-04-23-clean-4docs.json
eval/results/security/: injection_v1.json
eval/scripts/: _eval_utils.py  ablation_reranker.py  compare_chunkers.py  generate_v2.py
eval/security/: injection_suite.py
src/docquery/: __init__.py  config.py
src/docquery/api/: app.py  guard.py  ratelimit.py  routes.py  schemas.py
src/docquery/generate/: rag.py
src/docquery/ingest/: chunker.py  loader.py  pipeline.py  sparse.py
src/docquery/retrieve/: embedder.py  expand.py  hybrid.py  reranker.py
tests/: test_api.py  test_chunker.py  test_expand.py  test_guard.py  test_loader.py  test_rag_cost.py  test_rbac.py  test_sparse.py
