[project]
name = "docquery"
version = "0.1.0"
description = "Production RAG system for querying technical documentation"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "sentence-transformers",
    "qdrant-client",
    "openai",
    "langchain-text-splitters",
    "pypdf",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]
eval = [
    "ragas",
    "langchain-openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docquery"]

[tool.fastapi]
entrypoint = "docquery.api.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "FAST"]
